# LLM_prac

./: m02_day06_multi-turn.py  m02_day06_multi-turn_2.py  m02_day06_opneai_api.py  m02_day06_opneai_api2.py  m02_day07_llama_basic.ipynb  m02_day07_streamlit_chatbot.py  m02_day08_llama_basic2.ipynb  m02_day09.ipynb  m02_day10.ipynb  m02_day11.py  m03_day02_bm25.ipynb  m03_day03_01.py  m03_day05_ai_tutor.py  m03_day05_ai_tutor2.py  m03_day07_agent.py  m03_day08_agent2.py  m03_day08_image_tagger.py  m03_day14.py  m03_day1_streamlit_chat.py  pyproject.toml
index/bm25_index/: docstore.json  index_store.json
outputs/: invoice_items.csv  invoice_summary.csv
saved_index/: docstore.json  index_store.json
